<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/commutersFragment">

    <action
        android:id="@+id/action_global_commuterFragment"
        app:destination="@+id/commutersFragment"
        app:launchSingleTop="true"
        />

    <fragment
        android:id="@+id/commutersFragment"
        android:name="com.example.commutingapp.views.ui.fragments.CommuterFragment"
        android:label="@string/title_Commutes"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.commutingapp.views.ui.fragments.SettingsFragment"
        android:label="@string/title_Settings" />


    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.commutingapp.views.ui.fragments.StatisticsFragment"
        android:label="@string/title_Statistics" />


    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.commutingapp.views.ui.fragments.WeatherFragment"
        android:label="@string/title_Weather" />


    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.example.commutingapp.views.ui.fragments.NavigationFragment"/>
</navigation>