<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noInternetDialog"
    android:layout_width="wrap_content"
    android:layout_height="345dp"
    android:layout_gravity="center"
    app:cardElevation="30dp"
    app:cardCornerRadius="38dp"
    android:elevation="40dp">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewDisplay"
                android:layout_width="98dp"
                android:layout_height="95dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_wifi_no_internet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewTextDisplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/titleNoInternetDialog"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewDisplay" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descriptionNoInternetDialog"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="14.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTextDisplay" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="224dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue2"
                android:text="@string/RetryButton"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/go_to_settings_Button"
                android:layout_width="224dp"
                android:layout_height="42dp"
                android:layout_marginTop="-3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/transparent"
                android:text="@string/GoToSettings"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16.5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/retry_button"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


