<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/RL_Home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="12dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:elevation="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/weather_background_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:elevation="3dp"
            android:scaleType="centerCrop"
            android:src="@drawable/night"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="425dp"
            android:background="@drawable/weather_fragment_background_1"
            android:elevation="4dp"
            android:foregroundGravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <ImageView
            android:id="@+id/imageViewBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/weather_fragment_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView

            android:id="@+id/textViewCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingBottom="10dp"
            android:elevation="5dp"
            android:text="@string/place_text_holder"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/temperature_placeholder"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityName" />


        <ImageView
            android:id="@+id/imageViewWeatherCondition"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:elevation="9dp"
            android:src="@drawable/default_weather_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTemperature" />

        <TextView
            android:id="@+id/textViewWeatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="9dp"
            android:text="@string/place_text_holder"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewWeatherCondition" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDisplay"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"

            android:elevation="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInformation" />

        <TextView
            android:id="@+id/textViewhighest_lowest_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:padding="2dp"
            android:text="@string/highest_and_lowest_temperature"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeatherCondition" />

        <TextView
            android:id="@+id/textViewInformation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="104dp"
            android:elevation="12dp"
            android:padding="3dp"
            android:text="@string/long_info"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewhighest_lowest_temperature" />

        <TextView
            android:id="@+id/textViewWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:elevation="12dp"
            android:padding="3dp"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_baseline_wind_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewhighest_lowest_temperature"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewChanceOfRain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:elevation="12dp"
            android:padding="3dp"
            android:text="@string/rain_0"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_rain_svgrepo_com"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewCloud"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:elevation="12dp"
            android:padding="3dp"
            android:text="@string/cloud"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_baseline_cloud_24"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewhighest_lowest_temperature"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:elevation="12dp"
            android:padding="3dp"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_droplet_svgrepo_com"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textViewWindSpeed"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
             />

        <ImageButton
            android:id="@+id/img_btn_refresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/transparent"
            android:elevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_refresh_24"
            tools:ignore="SpeakableTextPresentCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>